@@ -7,6 +7,7 @@ PHP                                                                        NEWS
 - Fixed bug #36629 (SoapServer::handle() exits on SOAP faults). (Dmitry)
 - Fixed bug #36697 (Transparency is lost when using imagecreatetruecolor).
  (Pierre)
+- Fixed bug #36568 (memory_limit setting on win32 has no effect). (Dmitry)
 
 09 Mar 2006, PHP 5.1.3RC1
 - Updated PCRE to version 6.6. (Andrei)
